update goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -32,7 +32,9 @@ checksum:
   # Default is `{{ .ProjectName }}_{{ .Version }}_checksums.txt`.
   name_template: "{{ .ProjectName }}_{{ .Version }}_sha256-checksums.txt"
 
-archive:
+archives:
+-
+  id: "tarball"
   format: tar.gz
   files:
     - LICENSE
